--- a/about-us.html
+++ b/about-us.html
@@ -39,7 +39,10 @@
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Online Store <em>Website</em></h2></a>
+          <a class="navbar-brand" href="index.html">
+            <h2 class="big-logo"><em>A</em>nju's <em>H</em>ome <em>D</em>ecor</h2>
+            <h2 class="short-logo"><em>AHD</em></h2>
+          </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -141,7 +144,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="inner-content">
-              <p>Copyright © 2020 Company Name - Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a></p>
+              <p>Copyright © 2021 Anju. All rights reserved.</p>
             </div>
           </div>
         </div>
