--- a/checkout.html
+++ b/checkout.html
@@ -40,8 +40,8 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="index.html">
-               <h2 class="big-logo"><em>A</em>nju's <em>H</em>ome <em>D</em>ecor</h2>
-               <h2 class="short-logo"><em>AHD</em></h2>
+               <h2 class="big-logo"><img src="./assets/images/logo.png" class="img-nav"><em> A</em>nju's <em>H</em>ome <em>D</em>ecor</h2>
+               <h2 class="short-logo"><img src="./assets/images/logo.png" class="img-nav"><em> AHD</em></h2>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
